fix message panel covering drag zone

--- a/public/stylesheets/workspace.css
+++ b/public/stylesheets/workspace.css
@@ -46,7 +46,7 @@
     position: relative;
     float: right;
     height: 100%;
-    width: 100%;
+    width: 25%;
     overflow: visible;
 }
 
